# sarissa

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  debug_boolean.rs
benches/: bench.rs  distance_bench.rs  hnsw_benchmark.rs
docs/: tasks.md  vector_collection.md  vector_engine.md
docs/implementations/: 20251201_lexical_builder.md  20251201_per_field_embedder.md  20251202_vector_search_candle.md
docs/plans/: 20251201_lexical_builder_plan.md  20251201_per_field_embedder_plan.md  20251202_vector_candle_plan.md  20251207_move_document_to_lexical.md  20251207_move_document_to_lexical_impl.md
docs/reports/: 2025-11-21-doc-centric-search.md  2025-11-21-vector-search-request.md  2025-11-22-vector-collection-rename.md  vectorengine_multimodal_report_20251125.md
examples/: basic_usage.rs  bm25_scorer.rs  boolean_query.rs  boost_filter.rs  debug_boolean.rs  document_converter.rs  document_parser.rs  dynamic_embedder_switching.rs  embedding_with_candle.rs  embedding_with_openai.rs  field_specific_search.rs  filter_pipeline.rs  full_text_search.rs  fuzzy_query.rs  geo_query.rs  hnsw_search.rs  hybrid_search.rs  hybrid_search.rs.disabled  identity_stemmer.rs  image_to_image_search.rs  individual_filters.rs  keyword_analyzer.rs  keyword_based_intent_classifier.rs  lexical_search.rs  lexical_search_with_char_filter.rs  limit_filter.rs  lowercase_filter.rs  ml_based_intent_classifier.rs  ml_based_query_expansion.rs  ml_enhanced_search.rs  ml_intent_classification.rs  multimodal_search.rs  noop_analyzer.rs  parallel_hybrid_search.rs  parallel_indexing.rs  parallel_search.rs  phrase_query.rs  pipeline_analyzer.rs  porter_stemmer.rs  query_parser.rs  (+25 more)
resource/ml/: intent_samples.json  intent_samples_en.json  synonyms.json
resources/: documents.csv  documents.jsonl  vector_collection_sample.json  vector_engine_sample.json
resources/ml/: intent_samples_ja.json
src/: analysis.rs  document.rs  embedding.rs  embeding.rs  error.rs  full_text.rs  full_text_index.rs  hybrid.rs  lexical.rs  lib.rs  main.rs  ml.rs  parallel_full_text_search.rs  parallel_hybrid_search.rs  parallel_lexical_index.rs  parallel_vector_index.rs  parallel_vector_search.rs  query.rs  spelling.rs  storage.rs  util.rs  vector.rs
src/analysis/: analyzer.rs  analyzer.rs.bak  char_filter.rs  filter.rs  mod.rs  stemmer.rs  synonym.rs  token.rs  token_filter.rs  tokenizer.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs
src/document/: analyzed.rs  converter.rs  document.rs  field.rs  field_value.rs  mod.rs  parser.rs
src/embedding/: candle_bert_embedder.rs  candle_clip_embedder.rs  candle_multimodal_embedder.rs  candle_text_embedder.rs  embedder.rs  image_embedder.rs  multimodal_embedder.rs  noop.rs  openai_embedder.rs  openai_text_embedder.rs  per_field.rs  precomputed.rs  text_embedder.rs
src/embeding/: engine.rs  mod.rs
src/full_text/: dictionary.rs  doc_values.rs  index.rs  inverted_index.rs  mod.rs  posting.rs  reader.rs  search.rs  segment.rs
src/full_text_index/: advanced_writer.rs  background_tasks.rs  deletion.rs  merge_engine.rs  merge_policy.rs  mod.rs  optimization.rs  optimize.rs  segment_manager.rs  transaction.rs  writer.rs
src/full_text_search/: advanced_reader.rs  engine.rs  facet.rs  highlight.rs  mod.rs  result_processor.rs  searcher.rs  similarity.rs  spell_corrected.rs
src/hybrid/: config.rs  core.rs  engine.rs  index.rs  search.rs  stats.rs  types.rs  writer.rs
src/hybrid_search/: config.rs  engine.rs  merger.rs  mod.rs  scorer.rs  stats.rs  types.rs
src/index/: advanced_reader.rs  advanced_writer.rs  background_tasks.rs  bkd_tree.rs  deletion.rs  dictionary.rs  index.rs  merge_engine.rs  merge_policy.rs  mod.rs  optimization.rs  optimize.rs  posting.rs  reader.rs  segment.rs  segment_manager.rs  transaction.rs  writer.rs
src/lexical/: automaton.rs  collection.rs  core.rs  dictionary.rs  doc_values.rs  document.rs  engine.rs  index.rs  inverted_index.rs  posting.rs  reader.rs  search.rs  segment.rs  terms.rs  types.rs  writer.rs
src/ml/: anomaly.rs  features.rs  intent_classifier.rs  mod.rs  models.rs  optimization.rs  query_expansion.rs  ranking.rs  recommendation.rs
src/parallel_full_text_index/: batch_processor.rs  engine.rs  partitioner.rs  writer_manager.rs
src/parallel_full_text_search/: engine.rs  example.rs  index_manager.rs  merger.rs  metrics.rs  mod.rs  search_task.rs
src/parallel_hybrid_search/: config.rs  engine.rs  executor.rs  merger.rs  mock_index.rs  mod.rs  types.rs
src/parallel_index/: batch_processor.rs  config.rs  engine.rs  example.rs  metrics.rs  mod.rs  partitioner.rs  writer_manager.rs
src/parallel_lexical_index/: batch_processor.rs  engine.rs  writer_manager.rs
src/parallel_lexical_search/: engine.rs  example.rs  index_manager.rs  merger.rs
src/parallel_search/: config.rs  engine.rs  example.rs  index_manager.rs  merger.rs  metrics.rs  mod.rs  search_task.rs
src/parallel_vector_index/: builder.rs  executor.rs  merger.rs  mod.rs  segment.rs
src/parallel_vector_search/: executor.rs  merger.rs  mod.rs
src/query/: advanced_query.rs  boolean.rs  collector.rs  fuzzy.rs  geo.rs  matcher.rs  mod.rs  multi_term.rs  parser.rs  phrase.rs  query.rs  range.rs  scorer.rs  span.rs  term.rs  wildcard.rs
src/schema/: field.rs  mod.rs  schema.rs
src/search/: engine.rs  facet.rs  highlight.rs  hybrid.rs  mod.rs  result_processor.rs  scoring.rs  searcher.rs  similarity.rs  spell_corrected.rs
src/spelling/: corrector.rs  dictionary.rs  levenshtein.rs  mod.rs  suggest.rs  typo_patterns.rs
src/storage/: column.rs  file.rs  memory.rs  mmap.rs  mod.rs  prefixed.rs  structured.rs  traits.rs
src/util/: levenshtein.rs  mod.rs  simd.rs  simd_wide.rs  (+1 more)
test_data/: sample.jsonl
tests/: advanced_queries.rs  boolean_query_test.rs  deletion_logic_test.rs  dummy_verification_step.rs  hnsw_append_test.rs  hybrid_integration_test.rs  mmap_test.rs  vacuum_test.rs  vector_collection_scenarios.rs  vector_engine_scenarios.rs  vector_merge_test.rs  vector_segment_test.rs  wal_recovery_test.rs
(+301 files in other folders)
