[package]
name = "sarissa"
version = "0.1.0"
edition = "2024"
description = "A fast, featureful full-text search library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mosuka/sarissa"


[dependencies]
ahash = "0.8.12"
env_logger = "0.11.8"
log = "0.4.28"
anyhow = "1.0.100"
bincode = "2.0.1"
bit-vec = "0.8.0"
byteorder = "1.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env", "color"] }
crc32fast = "1.5.0"
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
futures = "0.3.31"
lazy_static = "1.5.0"
memmap2 = "0.9.8"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
pest = "2.8.3"
pest_derive = "2.8.3"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smartcore = "0.4.4"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
unicode-segmentation = "1.12.0"
unicode-normalization = "0.1.24"
uuid = { version = "1.18.1", features = ["v4"] }
wide = "0.8.0"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.23.0"
tokio-test = "0.4.4"
