[package]
name = "sarissa"
version = "0.1.0"
edition = "2024"
description = "A fast, featureful full-text search library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mosuka/platypus"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.100"
async-trait = "0.1.89"
bincode = "2.0.1"
bit-vec = "0.8.0"
byteorder = "1.5.0"
chrono = { version = "0.4.42", features = ["serde"] }
crc32fast = "1.5.0"
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
csv = "1.4.0"
fst = "0.4.7"
futures = "0.3.31"
lazy_static = "1.5.0"
lindera = { version = "1.4.1", features = [
    "embedded-unidic",
    "embedded-ko-dic",
    "embedded-cc-cedict",
] }
log = "0.4.28"
memmap2 = "0.9.9"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
pest = "2.8.3"
pest_derive = "2.8.3"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
unicode-segmentation = "1.12.0"
unicode-normalization = "0.1.25"
uuid = { version = "1.18.1", features = ["v4"] }
wide = "0.8.3"
tempfile = "3.23.0"

# Optional embedding dependencies
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
hf-hub = { version = "0.4.3", optional = true }
tokenizers = { version = "0.22.1", optional = true }
reqwest = { version = "0.12.24", features = ["json"], optional = true }
image = { version = "0.25.9", optional = true }

[features]
default = []
embeddings-candle = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
]
embeddings-multimodal = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
    "image",
]
embeddings-openai = ["reqwest"]
embeddings-all = [
    "embeddings-candle",
    "embeddings-multimodal",
    "embeddings-openai",
]

[[example]]
name = "embedding_with_candle"
required-features = ["embeddings-candle"]

[[example]]
name = "embedding_with_openai"
required-features = ["embeddings-openai"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.7.0"
tokio-test = "0.4.4"
